# ChessMoveValidation

./: CMakeLists.txt
include/: BishopMoveValidation.h  ChessFigure.h  FigureMoveValidation.h  KingMoveValidation.h  KnightMoveValidation.h  PawnMoveValidation.h  QueenMoveValidation.h  RookMoveValidation.h
src/: BishopMoveValidation.cpp  ChessFigure.cpp  FigureMoveValidation.cpp  KingMoveValidation.cpp  KnightMoveValidation.cpp  PawnMoveValidation.cpp  QueenMoveValidation.cpp  RookMoveValidation.cpp  main.cpp
test/: test.cpp
